[project]
name = "porkbun_updater"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Westover", email = "james@westover.house"},
]
dependencies = ["requests>=2.32.3", "click>=8.1.7"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
